src/tests/snapshots/hebi__tests__modules__double_import.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
value := 100


# Input:
from test import value
print value
from test import value
print value


# Result (success):
none

# Stdout:
100
100


