src/tests/snapshots/hebi__tests__modules__import_cycle.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:a
import b

# module:b
import a

            
# Input:
import a


# Result (error):
attempted to import partially initialized module a

# Stdout:


