src/tests/snapshots/hebi__tests__modules__load_class_with_module_vars.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
value := 100
class Test:
  fn f(self):
    return value



# Input:
from test import Test

t := Test()
print t.f()


# Result (success):
none

# Stdout:
100


