src/tests/snapshots/hebi__tests__modules__load_fn_named.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
fn f(value):
  print value



# Input:
from test import f

print f(100)


# Result (success):
none

# Stdout:
100
none


