src/tests/snapshots/hebi__tests__modules__simple_load.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
value := 100


# Input:
import test

print test.value


# Result (success):
none

# Stdout:
100


