src/tests/snapshots/hebi__tests__modules__simple_load_named.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
value := 100


# Input:
from test import value

print value


# Result (success):
none

# Stdout:
100


